# hotel-management

./: .env.example  pyproject.toml  ruff.toml
config/: env.py
config/settings/: base.py  dev.py
src/authentication/: serializers.py  urls.py
src/authentication/tests/: test_common_auth.py  test_email_auth.py
src/authentication/views/: __init__.py  common.py  email.py  google.py
src/config/: env.py  urls.py
src/config/settings/: base.py  dev.py
src/db/: apps.py  mixins.py
src/db/migrations/: 0001_initial.py  0002_user_is_password_autoset.py
src/db/models/: base.py  user.py
src/utils/: ip_address.py  valid_uuid.py
